[package]
name = "rust-derive-analysis"
version = "0.1.0"
edition = "2021"


[dependencies]
leabharlann-logging = { path = "../leabharlann/crates/leabharlann-logging" }
leabharlann-network = { path = "../leabharlann/crates/leabharlann-network" }
leabharlann-string = { path = "../leabharlann/crates/leabharlann-string" }
leabharlann-processing = { path = "../leabharlann/crates/leabharlann-processing" }
leabharlann-fs = { path = "../leabharlann/crates/leabharlann-fs" }

# GitHub API and HTTP client
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Rust parsing
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# Data serialization
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
tracing = "0.1"

# Command line argument parsing
clap = { version = "4.0", features = ["derive"] }

# Channel operations for parallel processing
crossbeam-channel = "0.5"
rand = "0.9.2"
