[project]
name = "rust-derive-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.8.1",
    "matplotlib>=3.10.5",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]
